--- a/index2.html
+++ b/index2.html
@@ -4,14 +4,18 @@
 
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> Carnaval 2019</title>
+    <meta name="author" content="Raul Dionisio">
+    <meta name="description" content="Landing page sobre o carnaval brasileiro">
+    <meta name="keywords" content="Carnaval, Salvador, Rio de Janeiro, bootstrap, css, html">
+   <title> Carnaval 2019</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main2.css" />
     <script src="main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css" />
-</head> 
+
+  </head> 
 <body>
  
       <div class="container">
